--- a/package.json
+++ b/package.json
@@ -2,18 +2,23 @@
   "name": "custom-chess",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "https": "next dev --experimental-https",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "challenges": "node challangesLobbySocket.js"
   },
   "dependencies": {
+    "@upstash/redis": "^1.34.4",
     "jsonwebtoken": "^9.0.2",
     "mysql": "^2.18.1",
     "next": "15.1.6",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "redis": "^4.7.0",
+    "ws": "^8.18.1"
   }
 }
